update picture config

--- a/_config.yml
+++ b/_config.yml
@@ -61,3 +61,19 @@ adsense-data-ad-slot: ""
 lazyimages: "disabled"
 
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
+
+picture:
+  source: "assets/images"
+  output: "assets/images_out"
+  suppress_warnings: true
+  ignore_missing_images: false
+  presets:
+    default:
+      ppi: [1, 1.5]
+      source_medium:
+        media: "(min-width: 40em)"
+        width: "600"
+        height: "300"
+      source_default:
+        width: "300"
+
