--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -3,27 +3,24 @@ name: Build and deploy jekyll site
 on:
   push:
     branches:
-      - master
-      # - source
-      # It is highly recommended that you only run this action on push to a 
-        # specific branch, eg. master or source (if on *.github.io repo)
-    
+      - dev
+
 jobs:
   jekyll:
-    runs-on: ubuntu-16.04 # can change this to ubuntu-latest if you prefer
+    runs-on: ubuntu-18.04 # can change this to ubuntu-latest if you prefer
     steps:
       - name: 📂 setup
         uses: actions/checkout@v2
+
         # include the lines below if you are using jekyll-last-modified-at
         # or if you would otherwise need to fetch the full commit history
         # however this may be very slow for large repositories!
         # with:
-          # fetch-depth: '0'
-
+        # fetch-depth: '0'
       - name: 💎 setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6 # can change this to 2.7 or whatever version you prefer
+          ruby-version: 2.7 # can change this to 2.7 or whatever version you prefer
 
       - name: 🔨 install dependencies & build site
         uses: limjh16/jekyll-action-ts@v2.4.0
@@ -34,7 +31,7 @@ jobs:
           format_output: true
           ### Uses prettier https://prettier.io to format jekyll output HTML.
           #
-          # prettier_opts: '{ "useTabs": true }'
+          prettier_opts: '{ "useTabs": true }'
           ### Sets prettier options (in JSON) to format output HTML. For example, output tabs over spaces.
           ### Possible options are outlined in https://prettier.io/docs/en/options.html
           #
@@ -43,7 +40,7 @@ jobs:
           ### Useful if the file is exceptionally large, so formatting it takes a while.
           ### Also useful if HTML compression is enabled for that file / formatting messes it up.
           #
-          # jekyll_src: sample_site
+          # jekyll_src: /
           ### If the jekyll website source is not in root, specify the directory. (in this case, sample_site)
           ### By default, this is not required as the action searches for a _config.yml automatically.
           #
@@ -60,7 +57,7 @@ jobs:
           ### In cases where you want to specify the cache key, enable the above 2 inputs
           ### Follows the format here https://github.com/actions/cache
           #
-          # custom_opts: '--drafts --lsi'
+          # custom_opts: '--drafts --future'
           ### If you need to specify any Jekyll build options, enable the above input
           ### Flags accepted can be found here https://jekyllrb.com/docs/configuration/options/#build-command-options
 
@@ -71,4 +68,4 @@ jobs:
           publish_dir: ./_site
           # if the repo you are deploying to is <username>.github.io, uncomment the line below.
           # if you are including the line below, make sure your source files are NOT in the master branch:
-          # publish_branch: master
+          publish_branch: main
