--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-# Site
+# Site Settings
+# You can change the settings below in order to customize your website.
 name: "ProjectVW.com"
 title: "ProjectVW.com - 1973 Volkswagen Super Beetle"
 description: "Have you seen my 1973 VW Super Beetle?"
@@ -6,10 +7,14 @@ logo: 'assets/images/logo.jpg'
 favicon: 'assets/images/logo.jpg'
 baseurl: 
 google_analytics: 'UA-69145-34'
-disqus: 
+
+# disqus: 
 mailchimp-list: 
 include: ["_pages"]
 permalink: /:title/
+url: 'https://www.projectvw.com'
+
+templatemessage: 'Forked from <a target="_blank" href="https://www.chrishammond.com/">Chris Hammond</a>''s <a href="https://jekyllexample.com">JekyllExample.com</a>.'
 
 # Authors
 authors:
@@ -22,16 +27,6 @@ authors:
     twitter: https://twitter.com/projectvw
     description: "Founder of ProjectVW.com. Read more at ChrisHammond.com" 
 
-#  john:
-#    name: John
-#    display_name: John    
-#    avatar: 'assets/images/avatar.png'
-#    gravatar: b1cc14991db7a456fcd761680bbc8f81
-#    email: wowthemesnet@gmail.com
-#    web: https://www.wowthemes.net
-#    twitter: https://twitter.com/wowthemesnet
-#    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
-
 # Plugins
 plugins:
   - jekyll_picture_tag
@@ -40,8 +35,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
-  
-    
+      
 # Archives
 jekyll-archives:
   enabled:
@@ -66,7 +60,7 @@ kramdown:
 
 # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
 adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3356074518164779"
+adsense-data-ad-client: ""
 adsense-data-ad-slot: ""
 
 # Lazy Images ("enabled" or "disabled")
@@ -89,3 +83,5 @@ picture:
       source_default:
         width: "300"
 
+# exclude:
+#  - /assets/images/*
