Updates for GA4

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Have you seen my 1973 VW Super Beetle?"
 logo: 'assets/images/logo.jpg'
 favicon: 'assets/images/logo.jpg'
 baseurl: 
-google_analytics: 'UA-69145-34'
+google_analytics: 'G-5V10Z3380G'
 
 # disqus: 
 mailchimp-list: 
