Updated workflow to use new action again v0.0.4 secrets

--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -14,3 +14,4 @@ jobs:
       with:
         ruby_version: '3.2.2'
         jekyll_build_opts: ''
+        github_token: ${{ secrets.GITHUB_TOKEN }}
