updates for config and twitter card

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ authors:
     email: projectvw@christoc.com
     web: https://chrishammond.com
     twitter: https://twitter.com/projectvw
+    twitterhandle: projectvw
     description: "Founder of ProjectVW.com. Read more at ChrisHammond.com" 
 
 # Plugins
