Updates to descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # You can change the settings below in order to customize your website.
 name: "ProjectVW.com"
 title: "ProjectVW.com - 1973 Volkswagen Super Beetle"
-description: "Have you seen my 1973 VW Super Beetle?"
+description: "Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!"
 logo: 'assets/images/logo.jpg'
 favicon: 'assets/images/logo.jpg'
 baseurl: 
